--- a/AppServSalud/src/main/resources/static/styles/main.css
+++ b/AppServSalud/src/main/resources/static/styles/main.css
@@ -29,7 +29,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 10000000;
   display: flex;
   justify-content: center;
   align-items: center;
