--- a/AppServSalud/src/main/resources/templates/forms/editarPaciente.html
+++ b/AppServSalud/src/main/resources/templates/forms/editarPaciente.html
@@ -20,6 +20,7 @@
             rel="stylesheet"
             th:href="@{/styles/main.css}"
         >
+        <link rel="stylesheet" th:href="@{/styles/index.css}">
     </head>
     <body>
         <header th:replace="/fragments/header :: header"></header>
@@ -31,6 +32,7 @@
                     th:action="@{/paciente/modificar/__${paciente.id}__}"
                     method="POST"
                     enctype="multipart/form-data"
+                    id="formulario"
                 >
                     <input
                         hidden
@@ -289,6 +291,7 @@
                             <form
                                 th:action="@{/paciente/cambiarContrasenha}"
                                 method="post"
+                                id="cambiarContrasenhaForm"
                             >
                                 <div class="modal-header">
                                     <h1
@@ -363,6 +366,7 @@
         </main>
 
         <footer th:replace="/fragments/footer :: footer"></footer>
+        <div th:replace="/fragments/spinner :: div"></div>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -371,6 +375,14 @@
         ></script>
         <script th:src="@{/js/toast.js}"></script>
         <script>
+            document.getElementById("cambiarContrasenhaForm").addEventListener("submit", () =>{
+                document.getElementById("spinner").style.display = "flex";
+            });
+
+            document.getElementById("formulario").addEventListener("submit", () =>{
+                document.getElementById("spinner").style.display = "flex";
+            });
+
             document.getElementById("enviar").disabled = true;
             function validarPassword() {
                 const password = document.getElementById("nuevaContrasenha").value;
