Cambios de listado de Ofertas

--- a/AppServSalud/src/main/resources/templates/fragments/header.html
+++ b/AppServSalud/src/main/resources/templates/fragments/header.html
@@ -136,6 +136,14 @@
                                                 Todos Los Profesionales
                                             </a>
                                         </li>
+                                        <li>
+                                            <a
+                                                class="nav-link"
+                                                href="/oferta/listar"
+                                            >
+                                                Todas Las Ofertas
+                                            </a>
+                                        </li>
                                     </ul>
                                 </div>
                             </li>
