--- a/AppServSalud/src/main/resources/templates/fragments/head.html
+++ b/AppServSalud/src/main/resources/templates/fragments/head.html
@@ -31,6 +31,10 @@
     src="https://kit.fontawesome.com/6959f9ca80.js"
     crossorigin="anonymous"
   ></script>
+  <script
+    src="https://kit.fontawesome.com/7e864dda55.js"
+    crossorigin="anonymous"
+  ></script>
 
   <script th:src="@{/js/dashProfesional.js}"></script>
 
