--- a/AppServSalud/src/main/resources/templates/forms/crearAdmin.html
+++ b/AppServSalud/src/main/resources/templates/forms/crearAdmin.html
@@ -133,13 +133,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center">
+                <div class="row justify-content-center text-center">
                     <div class="col-lg-8">
-                        <div class="input-group mb-3">
-                            <label
-                                class="input-group-text"
+                            <span
+                                class="fw-bold fs-5 bg-disabled p-1 px-2 rounded-2"
                                 for="permisos"
-                            >Permisos</label>
+                            >Permisos</span>
+                        <div class="input-group mb-3 justify-content-center">
 
                             <div
                                 class="btn-group m-1"
