--- a/AppServSalud/src/main/resources/templates/fragments/dashProfesionalPrincipal.html
+++ b/AppServSalud/src/main/resources/templates/fragments/dashProfesionalPrincipal.html
@@ -1,8 +1,8 @@
 <div
-  class="col-sm-12 px-5"
+  class="px-3 container-fluid"
   th:fragment="principal"
 >
-  <div class="container rounded-3 px-5 p-2 text-center">
+  <div class="container rounded-3 px-5 p-2 text-end">
     <p class="fw-bold fs-4 m-0">
       Bienvenido, <span
         class="text-capitalize"
@@ -11,237 +11,319 @@
     </p>
     <p class="m-0">Tenga un buen día</p>
   </div>
-  <div
-    id="dash-titulo"
-    class="mt-2 mb-2"
-  >
-    <h5>Ofertas</h5>
-  </div>
-  <div class="d-flex">
-    <div class="d-flex rounded-3 mt-2 overflow-auto col-sm-10 pb-3 pt-3" style="background-color: rgba(17, 34, 17, 0.356);">
-      <!-- ITERAR para mostrar las ofertas -->
-      <div class="card col-sm-4 mx-2">
-        <p th:each="oferta : ${ofertas}" th:text="${oferta.fecha} + ' ' + ${oferta.horario} + ' ' + (${oferta.reservado} ? RESERVADO : LIBRE)"></p>
+  <hr class="p-0 m-0">
+  <section class="row">
+    <!-- CONTENEDOR "OFERTAS" -->
+    <div
+      class="col-sm-6 d-grid"
+      th:if="${!ofertas.isEmpty}"
+    >
+      <div
+        id="dash-titulo"
+        class="mt-2"
+      >
+        <h5>Ofertas</h5>
       </div>
-      <div class="card col-sm-4 mx-2">
-        OFERTA2 <br>
-        OFERTA1 <br>
-        OFERTA1 <br>
-        OFERTA1 <br>
-        OFERTA1 <br>
-        OFERTA1 <br>
+      <div class="overflow-auto rounded-2 d-flex justify-content-center dashboardContenedorOfertas">
+        <div
+          class="row rounded-2 pt-3 justify-content-center"
+          style="width: 100%;"
+        >
+          <div class="row">
+            <div
+              class="col-lg-6 px-2 mb-3"
+              th:each="oferta : ${ofertas}"
+            >
+              <div class="card">
+                <p
+                  th:text="${oferta.fecha} + ' ' + ${oferta.horario} + ' ' + (${oferta.reservado} ? RESERVADO : LIBRE)">
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="card col-sm-4 mx-2">
-        OFERTA3 <br>
-        OFERTA1 <br>
-        OFERTA1 <br>
-        OFERTA1 <br>
-        OFERTA1 <br>
-        OFERTA1 <br>
-      </div>
-      <div class="card col-sm-4 mx-2">
-        OFERTA3 <br>
-        OFERTA1 <br>
-        OFERTA1 <br>
-        OFERTA1 <br>
-        OFERTA1 <br>
-        OFERTA1 <br>
-      </div>
-      <div class="card col-sm-4 mx-2">
-        OFERTA3 <br>
-        OFERTA1 <br>
-        OFERTA1 <br>
-        OFERTA1 <br>
-        OFERTA1 <br>
-        OFERTA1 <br>
-      </div>
-    </div>
-    <div class="col-sm-2 d-grid p-2 mx-1">
       <button
-        class="btn btn-light mt-1"
+        class="btn btn-primary mt-1"
         type="button"
         data-bs-toggle="modal"
         data-bs-target="#nuevaOferta"
         href="#"
       >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          height="1em"
-          viewBox="0 0 448 512"
-        ><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-          <path
-            d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
-          />
-        </svg>
-        Nueva Oferta
+        <div class="d-flex justify-content-center align-items-center text-withe">
+          <i class="fa-solid fa-plus"></i>
+          <p class="px-2 m-0">Agregar Oferta</p>
+        </div>
       </button>
     </div>
-  </div>
-  <!-- AGREGAR CONDICION PARA QUE SE MUESTRE UNO U OTRO -->
-  <div>
-    <div class="d-flex rounded-3 justify-content-center mt-2">
-      <div class="card col-sm-10 d-flex flex-column justify-content-center bg-warning fw-bold text-center">
-        <div class="align-self-center">
-          Sin ofertas disponibles
-        </div>
+    <!-- CONTENEDOR "SIN OFERTAS" -->
+    <div
+      class="col-sm-6"
+      th:if="${ofertas.isEmpty}"
+    >
+      <div
+        id="dash-titulo"
+        class="mt-2 mb-2"
+      >
+        <h5>Ofertas</h5>
       </div>
-      <div class="px-3 fw-bold text-center">
-        <div class="col-sm-2 d-grid">
+      <div class="row mt-2 rounded-2 pt-3 bg-warning">
+        <div class="container-fluid">
+          <div class="row">
+            <div
+              class="text-center"
+              style="margin-left: 25px;"
+            >
+              <p>Aún no ha creado ninguna oferta</p>
+            </div>
+          </div>
+        </div>
+        <div class="row d-grid">
           <button
-            class="btn btn-light"
+            class="btn btn-primary mt-1"
             type="button"
             data-bs-toggle="modal"
             data-bs-target="#nuevaOferta"
             href="#"
           >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              height="1em"
-              viewBox="0 0 448 512"
-            ><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-              <path
-                d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
-              />
-            </svg>
-            Agregar Oferta
+            <div class="d-flex justify-content-center align-items-center text-withe">
+              <i class="fa-solid fa-plus"></i>
+              <p class="px-2 m-0">Agregar Oferta</p>
+            </div>
           </button>
         </div>
       </div>
     </div>
-  </div>
-  <!-- FORMULARIO PARA CREAR UNA NUEVA OFERTA -->
-  <div
-    id="nuevaOferta"
-    class="modal fade rounded-2"
-    style="background-color: rgba(17, 34, 17, 0.356);"
-  >
-    <div class="modal-dialog modal-dialog-centered modal-lg">
-      <div
-        class="modal-content p-5"
-        style="width: 850px; background-color: rgb(98, 175, 98);"
-      >
+    <!-- FORMULARIO PARA CREAR UNA NUEVA OFERTA -->
+    <div
+      id="nuevaOferta"
+      class="modal fade rounded-2"
+      style="background-color: rgba(17, 34, 17, 0.356);"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div
+          class="modal-content p-5"
+          style="width: 850px; background-color: rgb(98, 175, 98);"
+        >
 
-        <form th:action="@{/oferta/enviar-oferta}" method="POST">
-          <div class="text-center mb-5">
-            <h3 class="card-title">Nueva Oferta</h3>
-          </div>
-          <div class="row justify-content-center">
-            <div class="col-lg-12">
-              <div class="input-group mb-3">
-                <label
-                  for="detalleOferta"
-                  class="input-group-text"
-                >Detalle</label>
-                <textarea
-                  name="detalleOferta"
-                  id="detalleOferta"
-                  cols="80"
-                  rows="3"
-                  class="form-control"
-                ></textarea>
+          <form
+            th:action="@{/oferta/enviar-oferta}"
+            method="POST"
+          >
+            <div class="text-center mb-5">
+              <h3 class="card-title">Nueva Oferta</h3>
+            </div>
+            <div class="row justify-content-center">
+              <div class="col-lg-12">
+                <div class="input-group mb-3">
+                  <label
+                    for="detalleOferta"
+                    class="input-group-text"
+                  >Detalle</label>
+                  <textarea
+                    name="detalleOferta"
+                    id="detalleOferta"
+                    cols="80"
+                    rows="3"
+                    class="form-control"
+                  ></textarea>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-6">
-              <div class="input-group mb-3">
+            <div class="row">
+              <div class="col-lg-6">
+                <div class="input-group mb-3">
                   <label
-                      class="input-group-text"
-                      for="fechaConsulta"
+                    class="input-group-text"
+                    for="fechaConsulta"
                   >Fecha Consulta</label>
                   <input
-                      class="form-control"
-                      type="date"
-                      name="fechaConsulta"
-                      id="fechaConsulta"
+                    class="form-control"
+                    type="date"
+                    name="fechaConsulta"
+                    id="fechaConsulta"
                   />
+                </div>
               </div>
-          </div>
-            <div class="col-lg-6">
-              <div class="input-group mb-3">
-                <label
-                  for="horarioOferta"
-                  class="input-group-text"
-                >Horario</label>
-                <input
-                  type="number"
-                  class="form-control"
-                  id="horarioOferta"
-                  name="horarioOferta"
-                >
+              <div class="col-lg-6">
+                <div class="input-group mb-3">
+                  <label
+                    for="horarioOferta"
+                    class="input-group-text"
+                  >Horario</label>
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="horarioOferta"
+                    name="horarioOferta"
+                  >
+                </div>
               </div>
             </div>
-          </div>
-          <div class="row justify-content-center">
-            <div class="col-lg-12">
-              <div class="input-group mb-3">
+            <div class="row justify-content-center">
+              <div class="col-lg-12">
+                <div class="input-group mb-3">
+                  <label
+                    for="ubicacionOferta"
+                    class="input-group-text"
+                  >Ubicación</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="ubicacionOferta"
+                    name="ubicacionOferta"
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="row justify-content-between">
+              <div class="col-lg-5">
+                <div class="input-group mb-3">
+                  <label
+                    for="precioOferta"
+                    class="input-group-text"
+                  >Precio Consulta</label>
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="precioOferta"
+                    name="precioOferta"
+                  >
+                </div>
                 <label
-                  for="ubicacionOferta"
-                  class="input-group-text"
-                >Ubicación</label>
+                  for="profesionalOferta"
+                  hidden
+                >Profesional</label>
                 <input
                   type="text"
-                  class="form-control"
-                  id="ubicacionOferta"
-                  name="ubicacionOferta"
+                  th:value="${profesional.id}"
+                  id="profesionalOferta"
+                  name="profesionalOferta"
+                  hidden
                 >
               </div>
-            </div>
-          </div>
-          <div class="row justify-content-between">
-            <div class="col-lg-5">
-              <div class="input-group mb-3">
-                <label
-                  for="precioOferta"
-                  class="input-group-text"
-                >Precio Consulta</label>
-                <input
-                  type="number"
-                  class="form-control"
-                  id="precioOferta"
-                  name="precioOferta"
-                >
+              <div class="col-lg-7">
+                <div class="input-group mb-3">
+                  <label
+                    for="tipoConsulta"
+                    class="input-group-text"
+                  >Tipo de consulta</label>
+                  <select
+                    class="form-select"
+                    id="tipoConsulta"
+                    name="tipoConsulta"
+                  >
+                    <option value="TELEMEDICINA">Telemedicina</option>
+                    <option value="PRESENCIAL">Presencial</option>
+                  </select>
+                </div>
               </div>
-              <label
-                for="profesionalOferta"
-                hidden
-              >Profesional</label>
-              <input
-                type="text"
-                th:value="${profesional.id}"
-                id="profesionalOferta"
-                name="profesionalOferta"
-                hidden
-              >
-            </div>
-            <div class="col-lg-7">
-              <div class="input-group mb-3">
-                <label
-                  for="tipoConsulta"
-                  class="input-group-text"
-                >Tipo de consulta</label>
-                <select
-                  class="form-select"
-                  id="tipoConsulta"
-                  name="tipoConsulta"
-                >
-                  <option value="TELEMEDICINA">Telemedicina</option>
-                  <option value="PRESENCIAL">Presencial</option>
-                </select>
+              <div class="col-lg-4">
+                <div class="input-group mb-3 d-grid">
+                  <button
+                    type="submit"
+                    class="btn btn-primary"
+                  >Crear</button>
+                </div>
               </div>
             </div>
-            <div class="col-lg-4">
-              <div class="input-group mb-3 d-grid">
-                <button
-                  type="submit"
-                  class="btn btn-primary"
-                >Crear Oferta</button>
-              </div>
-            </div>
-          </div>
-        </form>
+          </form>
 
+        </div>
       </div>
     </div>
-  </div>
+    <div class="col-sm-6">
+      <!-- PROXIMOS TURNOS -->
+      <div class="">
+        <div class="mt-2 mb-2">
+          <h5>Próximos Turnos</h5>
+        </div>
+        <div class="">
+          <div
+            class="row d-grid"
+            style="border:1px solid #DDD;"
+          >
+            <table class="table-sm tablaTurnosProfesional rounded-2">
+              <thead>
+                <tr>
+                  <th>Fecha</th>
+                  <th>Paciente</th>
+                  <th>Hora</th>
+                  <th>Acciones</th>
+                </tr>
+              </thead>
+              <tbody class="table-group-divider">
+                <tr
+                  th:each="turno : ${turnos}"
+                  th:if="${turno.activoProfesional}"
+                >
+                  <td th:text="${turno.fechaTurno}">fecha</td>
+                  <td th:text="${turno.paciente.nombre} + ' ' +${turno.paciente.apellido} ">paciente</td>
+                  <!-- <td th:text="${turno.horaTurno}">hora</td> -->
+                  <td>13:00Hs</td>
+                  <td>
+                    <select
+                      name=""
+                      id=""
+                      class="btn btn-outline-success btn-sm"
+                    >
+                      <option value="">Crear Registro</option>
+                      <option value="">Cancelar</option>
+                    </select>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <!-- TURNOS A CONFIRMAR -->
+      <div class="">
+        <div class="mt-2 mb-2">
+          <h5>Turnos A Confirmar</h5>
+        </div>
+        <div class="">
+          <div
+            class="row d-grid"
+            style="border:1px solid #DDD;"
+          >
+            <table class="table-sm tablaTurnosProfesional rounded-2">
+              <thead>
+                <tr>
+                  <th>Fecha</th>
+                  <th>Hora</th>
+                  <th>Paciente</th>
+                  <!-- <th>Obra Social</th> -->
+                  <th>Estado</th>
+                  <th>Acciones</th>
+                </tr>
+              </thead>
+              <tbody class="table-group-divider">
+                <tr
+                  th:each="turno : ${turnos}"
+                  th:if="${!turno.activoProfesional}"
+                >
+                  <td th:text="${turno.fechaTurno}">fecha</td>
+                  <td>09:00Hs</td>
+                  <td th:text="${turno.paciente.nombre} + ' ' +${turno.paciente.apellido} ">paciente</td>
+                  <!-- <td th:text="${turno.paciente.obraSocial.name}">obra social</td> -->
+                  <td th:text="${turno.estado}">estado</td>
+                  <td><a th:href="@{/turno/aceptarTurno/__${turno.id}__}">Aceptar</a></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <!-- TURNOS CANCELADOS -->
+      <div class="">
+          <div
+            class="row d-grid text-end"
+            style="border:1px solid #DDD;"
+          >
+            <a href="#">Ver Cancelados</a>
+          </div>
+      </div>
+    </div>
+  </section>
 </div>
